"Réutilisation du Component Collapse et dernier correctif d'une erreur console"

--- a/projet_5_app/src/components/Collapse.scss
+++ b/projet_5_app/src/components/Collapse.scss
@@ -14,6 +14,7 @@
 
     h2 {
       margin: 0;
+      color: white; 
     }
 
     .collapse__button {
@@ -46,11 +47,11 @@
       padding: 10px;
       background-color: #f0f0f0;
     }
-  }
 
-  &__text {
-    padding: 10px;
-    background-color: #f0f0f0;
+    .collapse__text {
+      padding: 10px;
+      background-color: #f0f0f0;
+    }
   }
 }
 
@@ -108,6 +109,10 @@
   .collapse {
     &__header {
       padding: 5px;
+
+      h2 {
+        font-size: 0.9rem;
+      }
 
       button {
         font-size: 0.9rem;
