--- a/projet_5_app/src/components/Logement.scss
+++ b/projet_5_app/src/components/Logement.scss
@@ -113,49 +113,62 @@
     gap: 20px;
     margin-bottom: 1rem;
 
-    .description, .equipments {
+    .collapse {
       flex: 1;
       margin-bottom: 1rem;
 
-      .collapse-header {
+      .collapse__header {
         display: flex;
         justify-content: space-between;
         align-items: center;
         cursor: pointer;
+        background-color: #ff6060;
+        padding: 5px 10px;
+        border-radius: 5px;
+
+        h2 {
+          margin: 0;
+          color: white;
+        }
 
         button {
-          background-color: #ff6060;
-          color: white;
+          background: none;
           border: none;
-          padding: 0.5rem 1rem;
-          border-radius: 5px;
+          font-size: 1.5rem;
           cursor: pointer;
           display: flex;
           align-items: center;
-          margin-bottom: 0.5rem;
-          width: 100%;
-          text-align: left;
-          justify-content: space-between;
-
           &:hover {
             background-color: #ff4040;
           }
 
           .collapse-icon {
-            margin-left: 10px;
+            color: white;
             transition: transform 0.3s ease;
           }
 
-          .rotate {
+          &.open .collapse__icon {
             transform: rotate(180deg);
           }
         }
       }
 
-      p, ul {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
+      .collapse__content {
+        overflow: hidden;
+        transition: height 0.3s ease, padding 0.3s ease;
+        height: 0;
+        padding: 0 10px;
+
+        &--open {
+          height: auto;
+          padding: 10px;
+          background-color: #f0f0f0;
+        }
+
+        .collapse__text {
+          padding: 10px;
+          background-color: #f0f0f0;
+        }
       }
     }
   }
